翻译v3暂存